Sundry fixes
Social media icons were too small—made them larger. Bullets were
showing up on a directory list where bullets should not be; remedied
that. Adjusted spacing at the top of the page.

--- a/css/local-group.css
+++ b/css/local-group.css
@@ -146,13 +146,11 @@
     font-size: 2em;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    margin-top: 3em;
     text-align: center;
     width: 100%; }
     @media screen and (min-width: 45em) {
       .u-pageInner .u-Masthead__siteName {
         order: 2;
-        margin-top: 0;
         text-align: left;
         width: auto; } }
     @media screen and (min-width: 50em) {
@@ -565,6 +563,7 @@ h3.Module__header {
   border-bottom: 1px solid #eee;
   overflow: hidden;
   width: 100%;
+  list-style: none;
   margin-bottom: 0.2em !important;
   padding-bottom: 0.2em !important; }
   .directorylisting__itemContainer .directorylisting__item {
@@ -605,7 +604,11 @@ h3.Module__header {
 /*	PRESIDENT-SPECIFIC */
 .SocialAccount__iconContainer {
   display: inline-block;
-  margin: 0.4em; }
+  margin: 0.4em;
+  width: 2em;
+  height: 2em; }
+  .SocialAccount__iconContainer svg {
+    height: 100%; }
 
 .Module__header {
   margin-bottom: 0.2em;
@@ -1080,20 +1083,27 @@ h1, h2, h3, h4, h5, h6 {
 @media (min-width: 50em) {
   .u-lMain {
     width: 78.5%; } }
-@media screen and (min-width: 45em) {
-  .u-Masthead__siteName {
-    margin-top: 0; } }
+.u-Masthead__siteName {
+  margin-top: 0; }
+  @media screen and (min-width: 45em) {
+    .u-Masthead__siteName {
+      margin-top: 0; } }
 
 .u-lFooter {
   padding: 0;
   margin: 0 2rem; }
 
-@media screen and (min-width: 45em) {
-  .PageContent {
-    margin-top: 3em; } }
-@media screen and (min-width: 62.5em) {
-  .PageContent {
-    margin-top: 0; } }
+.PageContent {
+  padding-top: 5em; }
+  @media screen and (min-width: 37.5em) {
+    .PageContent {
+      padding-top: 0; } }
+  @media screen and (min-width: 45em) {
+    .PageContent {
+      padding-top: 0; } }
+  @media screen and (min-width: 62.5em) {
+    .PageContent {
+      margin-top: 0; } }
 
 .u-lContent hr {
   border-top: 1px solid #eee;
