--- a/css/site-inaug.css
+++ b/css/site-inaug.css
@@ -309,13 +309,11 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 2em;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    margin-top: 3em;
     text-align: center;
     width: 100%; }
     @media screen and (min-width: 45em) {
       .u-pageInner .u-Masthead__siteName {
         order: 2;
-        margin-top: 0;
         text-align: left;
         width: auto; } }
     @media screen and (min-width: 50em) {
@@ -728,6 +726,7 @@ h3.Module__header {
   border-bottom: 1px solid #eee;
   overflow: hidden;
   width: 100%;
+  list-style: none;
   margin-bottom: 0.2em !important;
   padding-bottom: 0.2em !important; }
   .directorylisting__itemContainer .directorylisting__item {
@@ -1450,20 +1449,27 @@ h3.Module__header {
 @media (min-width: 50em) {
   .u-lMain {
     width: 78.5%; } }
-@media screen and (min-width: 45em) {
-  .u-Masthead__siteName {
-    margin-top: 0; } }
+.u-Masthead__siteName {
+  margin-top: 0; }
+  @media screen and (min-width: 45em) {
+    .u-Masthead__siteName {
+      margin-top: 0; } }
 
 .u-lFooter {
   padding: 0;
   margin: 0 2rem; }
 
-@media screen and (min-width: 45em) {
-  .PageContent {
-    margin-top: 3em; } }
-@media screen and (min-width: 62.5em) {
-  .PageContent {
-    margin-top: 0; } }
+.PageContent {
+  padding-top: 5em; }
+  @media screen and (min-width: 37.5em) {
+    .PageContent {
+      padding-top: 0; } }
+  @media screen and (min-width: 45em) {
+    .PageContent {
+      padding-top: 0; } }
+  @media screen and (min-width: 62.5em) {
+    .PageContent {
+      margin-top: 0; } }
 
 /*	This file contains a few overrides specific
 	to the Inauguration layout */
