--- a/scss/_modules/directorylisting.scss
+++ b/scss/_modules/directorylisting.scss
@@ -5,6 +5,7 @@
 	border-bottom: 1px solid #eee;
 	overflow: hidden;
 	width: 100%;
+	list-style: none;
     margin-bottom: 0.2em !important;
     padding-bottom: 0.2em !important;
 	
