--- a/scss/_modules/masthead.scss
+++ b/scss/_modules/masthead.scss
@@ -48,13 +48,13 @@
 		font-size: 2em;
 		letter-spacing: 0.1em;
 		text-transform: uppercase;
-		margin-top: 3em;
+//		margin-top: 3em;
 		text-align: center;
 		width: 100%;
 	
 		@media screen and (min-width: $small) {
 			order: 2;
-			margin-top: 0;
+//			margin-top: 0;
 			text-align: left;
 			width: auto;
 		}
