--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -69,6 +69,8 @@ body {
 	}
 }
 .u-Masthead__siteName {
+	margin-top: 0;	
+
 	@media screen and (min-width: $small) {
 		margin-top: 0;
 	}		
@@ -79,11 +81,14 @@ body {
 }
 
 .PageContent {
+	padding-top: 5em;
+	@media screen and (min-width: 37.5em) {
+		padding-top: 0;
+	}
 	@media screen and (min-width: $small) {
-		margin-top: 3em;
+		padding-top: 0;
 	}
 	@media screen and (min-width: $large) {
 		margin-top: 0;
 	}
 }
-
